4º Course/First Semester/PROCESADORES DEL LENGUAJE/Practica Final/parser.output
State 12 conflicts: 2 shift/reduce
State 39 conflicts: 2 shift/reduce
State 70 conflicts: 2 shift/reduce
State 84 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce


Grammar

    0 $accept: algoritmo $end

    1 algoritmo: ALGORITMO ID FIN_INSTRUCCION cuerpo FALGORITMO

    2 cuerpo: valores_entrada_salida declaraciones instrucciones

    3 valores_entrada_salida: entrada salida entrada_salida

    4 entrada: ε
    5        | VALORES_ENTRADA lista_declaraciones

    6 salida: ε
    7       | VALORES_SALIDA lista_declaraciones

    8 entrada_salida: ε
    9               | VALORES_ENTRADA_SALIDA lista_declaraciones

   10 declaraciones: ε
   11              | VAR lista_declaraciones FVAR

   12 lista_declaraciones: declaracion
   13                    | lista_declaraciones declaracion

   14 declaracion: lista_variables DEL_TIPO tipo FIN_INSTRUCCION
   15            | lista_variables_bool DEL_TIPO BOOLEANO FIN_INSTRUCCION

   16 lista_variables: ID
   17                | lista_variables COMA ID

   18 lista_variables_bool: ID_BOOLEANO
   19                     | lista_variables_bool COMA ID_BOOLEANO

   20 tipo: ENTERO
   21     | REAL
   22     | CADENA
   23     | CARACTER

   24 instrucciones: instruccion
   25              | instruccion FIN_INSTRUCCION instrucciones

   26 instruccion: asignacion
   27            | asignacion_booleana
   28            | estructura_condicional
   29            | estructura_iterativa
   30            | CONTINUAR

   31 asignacion: ID ASIGNACION expresion

   32 asignacion_booleana: ID_BOOLEANO ASIGNACION expresion_booleana

   33 expresion: PARENTESIS_I expresion_sin_parentesis PARENTESIS_D
   34          | expresion_sin_parentesis

   35 expresion_sin_parentesis: id_o_valor_o_funcion
   36                         | SUMA expresion
   37                         | RESTA expresion
   38                         | expresion SUMA expresion
   39                         | expresion RESTA expresion
   40                         | expresion DIVISION expresion
   41                         | expresion RESTO expresion
   42                         | expresion MULTIPLICACION expresion

   43 id_o_valor_o_funcion: ID
   44                     | VALOR
   45                     | llamada_funcion
   46                     | ID CORCHETE_I id_o_valor_o_funcion CORCHETE_D

   47 llamada_funcion: ID PARENTESIS_I lista_valores PARENTESIS_D

   48 lista_valores: id_o_valor_o_funcion
   49              | lista_valores COMA id_o_valor_o_funcion
   50              | valores_booleanos
   51              | lista_valores COMA valores_booleanos

   52 id_o_valor_o_funcion_booleana: llamada_funcion_booleana
   53                              | ID_BOOLEANO CORCHETE_I id_o_valor_o_funcion CORCHETE_D
   54                              | valores_booleanos

   55 llamada_funcion_booleana: ID_BOOLEANO PARENTESIS_I lista_valores PARENTESIS_D

   56 valores_booleanos: ID_BOOLEANO
   57                  | VALOR_BOOL

   58 estructura_condicional: SI expresion_booleana THEN m instrucciones estructura_sino FSI

   59 estructura_sino: ε
   60                | n SINO m expresion_booleana THEN m instrucciones estructura_sino

   61 n: ε

   62 expresion_booleana: id_o_valor_o_funcion_booleana
   63                   | id_o_valor_o_funcion COMPARADOR id_o_valor_o_funcion
   64                   | expresion_booleana OPERADOR m expresion_booleana
   65                   | PARENTESIS_I expresion_booleana PARENTESIS_D
   66                   | NEGACION expresion_booleana

   67 m: ε

   68 estructura_iterativa: MIENTRAS m expresion_booleana HACER m instrucciones FMIENTRAS
   69                     | PARA condicion_para HACER instrucciones FPARA

   70 condicion_para: asignacion_entera HASTA expresion

   71 asignacion_entera: ID ASIGNACION expresion


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VALOR <valor> (258) 44
    VALOR_BOOL <valor> (259) 57
    DIVISION <tipo> (260) 40
    COMPARADOR <tipo> (261) 63
    OPERADOR <tipo> (262) 64
    ID <nombre> (263) 1 16 17 31 43 46 47 71
    ID_BOOLEANO <nombre> (264) 18 19 32 53 55 56
    ENTERO <tipo> (265) 20
    REAL <tipo> (266) 21
    CADENA <tipo> (267) 22
    BOOLEANO <tipo> (268) 15
    CARACTER <tipo> (269) 23
    ALGORITMO (270) 1
    FALGORITMO (271) 1
    NEGACION (272) 66
    SI (273) 58
    SINO (274) 60
    FSI (275) 58
    MIENTRAS (276) 68
    FMIENTRAS (277) 68
    PARA (278) 69
    FPARA (279) 69
    ASIGNACION (280) 31 32 71
    COMA (281) 17 19 49 51
    PARENTESIS_I (282) 33 47 55 65
    PARENTESIS_D (283) 33 47 55 65
    CONTINUAR (284) 30
    SUMA (285) 36 38
    RESTA (286) 37 39
    RESTO (287) 41
    DEL_TIPO (288) 14 15
    THEN (289) 58 60
    CORCHETE_I (290) 46 53
    CORCHETE_D (291) 46 53
    FIN_INSTRUCCION (292) 1 14 15 25
    HASTA (293) 70
    HACER (294) 68 69
    MULTIPLICACION (295) 42
    VAR (296) 11
    FVAR (297) 11
    VALORES_ENTRADA (298) 5
    VALORES_SALIDA (299) 7
    VALORES_ENTRADA_SALIDA (300) 9


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    algoritmo (47)
        on left: 1
        on right: 0
    cuerpo (48)
        on left: 2
        on right: 1
    valores_entrada_salida (49)
        on left: 3
        on right: 2
    entrada (50)
        on left: 4 5
        on right: 3
    salida (51)
        on left: 6 7
        on right: 3
    entrada_salida (52)
        on left: 8 9
        on right: 3
    declaraciones (53)
        on left: 10 11
        on right: 2
    lista_declaraciones <lista> (54)
        on left: 12 13
        on right: 5 7 9 11 13
    declaracion <lista> (55)
        on left: 14 15
        on right: 12 13
    lista_variables <lista> (56)
        on left: 16 17
        on right: 14 17
    lista_variables_bool <lista> (57)
        on left: 18 19
        on right: 15 19
    tipo <tipo> (58)
        on left: 20 21 22 23
        on right: 14
    instrucciones (59)
        on left: 24 25
        on right: 2 25 58 60 68 69
    instruccion (60)
        on left: 26 27 28 29 30
        on right: 24 25
    asignacion (61)
        on left: 31
        on right: 26
    asignacion_booleana (62)
        on left: 32
        on right: 27
    expresion <tipoConSID> (63)
        on left: 33 34
        on right: 31 36 37 38 39 40 41 42 70 71
    expresion_sin_parentesis <tipoConSID> (64)
        on left: 35 36 37 38 39 40 41 42
        on right: 33 34
    id_o_valor_o_funcion <tipoConSID> (65)
        on left: 43 44 45 46
        on right: 35 46 48 49 53 63
    llamada_funcion (66)
        on left: 47
        on right: 45
    lista_valores (67)
        on left: 48 49 50 51
        on right: 47 49 51 55
    id_o_valor_o_funcion_booleana <tipo> (68)
        on left: 52 53 54
        on right: 62
    llamada_funcion_booleana (69)
        on left: 55
        on right: 52
    valores_booleanos <tipo> (70)
        on left: 56 57
        on right: 50 51 54
    estructura_condicional <next> (71)
        on left: 58
        on right: 28
    estructura_sino <next_con_quad> (72)
        on left: 59 60
        on right: 58 60
    n <next> (73)
        on left: 61
        on right: 60
    expresion_booleana <exp> (74)
        on left: 62 63 64 65 66
        on right: 32 58 60 64 65 66 68
    m <tipo> (75)
        on left: 67
        on right: 58 60 64 68
    estructura_iterativa <next> (76)
        on left: 68 69
        on right: 29
    condicion_para <next_con_quad> (77)
        on left: 70
        on right: 69
    asignacion_entera <tipo> (78)
        on left: 71
        on right: 70


State 0

    0 $accept: • algoritmo $end

    ALGORITMO  shift, and go to state 1

    algoritmo  go to state 2


State 1

    1 algoritmo: ALGORITMO • ID FIN_INSTRUCCION cuerpo FALGORITMO

    ID  shift, and go to state 3


State 2

    0 $accept: algoritmo • $end

    $end  shift, and go to state 4


State 3

    1 algoritmo: ALGORITMO ID • FIN_INSTRUCCION cuerpo FALGORITMO

    FIN_INSTRUCCION  shift, and go to state 5


State 4

    0 $accept: algoritmo $end •

    $default  accept


State 5

    1 algoritmo: ALGORITMO ID FIN_INSTRUCCION • cuerpo FALGORITMO

    VALORES_ENTRADA  shift, and go to state 6

    $default  reduce using rule 4 (entrada)

    cuerpo                  go to state 7
    valores_entrada_salida  go to state 8
    entrada                 go to state 9


State 6

    5 entrada: VALORES_ENTRADA • lista_declaraciones

    ID           shift, and go to state 10
    ID_BOOLEANO  shift, and go to state 11

    lista_declaraciones   go to state 12
    declaracion           go to state 13
    lista_variables       go to state 14
    lista_variables_bool  go to state 15


State 7

    1 algoritmo: ALGORITMO ID FIN_INSTRUCCION cuerpo • FALGORITMO

    FALGORITMO  shift, and go to state 16


State 8

    2 cuerpo: valores_entrada_salida • declaraciones instrucciones

    VAR  shift, and go to state 17

    $default  reduce using rule 10 (declaraciones)

    declaraciones  go to state 18


State 9

    3 valores_entrada_salida: entrada • salida entrada_salida

    VALORES_SALIDA  shift, and go to state 19

    $default  reduce using rule 6 (salida)

    salida  go to state 20


State 10

   16 lista_variables: ID •

    $default  reduce using rule 16 (lista_variables)


State 11

   18 lista_variables_bool: ID_BOOLEANO •

    $default  reduce using rule 18 (lista_variables_bool)


State 12

    5 entrada: VALORES_ENTRADA lista_declaraciones •
   13 lista_declaraciones: lista_declaraciones • declaracion

    ID           shift, and go to state 10
    ID_BOOLEANO  shift, and go to state 11

    ID           [reduce using rule 5 (entrada)]
    ID_BOOLEANO  [reduce using rule 5 (entrada)]
    $default     reduce using rule 5 (entrada)

    declaracion           go to state 21
    lista_variables       go to state 14
    lista_variables_bool  go to state 15


State 13

   12 lista_declaraciones: declaracion •

    $default  reduce using rule 12 (lista_declaraciones)


State 14

   14 declaracion: lista_variables • DEL_TIPO tipo FIN_INSTRUCCION
   17 lista_variables: lista_variables • COMA ID

    COMA      shift, and go to state 22
    DEL_TIPO  shift, and go to state 23


State 15

   15 declaracion: lista_variables_bool • DEL_TIPO BOOLEANO FIN_INSTRUCCION
   19 lista_variables_bool: lista_variables_bool • COMA ID_BOOLEANO

    COMA      shift, and go to state 24
    DEL_TIPO  shift, and go to state 25


State 16

    1 algoritmo: ALGORITMO ID FIN_INSTRUCCION cuerpo FALGORITMO •

    $default  reduce using rule 1 (algoritmo)


State 17

   11 declaraciones: VAR • lista_declaraciones FVAR

    ID           shift, and go to state 10
    ID_BOOLEANO  shift, and go to state 11

    lista_declaraciones   go to state 26
    declaracion           go to state 13
    lista_variables       go to state 14
    lista_variables_bool  go to state 15


State 18

    2 cuerpo: valores_entrada_salida declaraciones • instrucciones

    ID           shift, and go to state 27
    ID_BOOLEANO  shift, and go to state 28
    SI           shift, and go to state 29
    MIENTRAS     shift, and go to state 30
    PARA         shift, and go to state 31
    CONTINUAR    shift, and go to state 32

    instrucciones           go to state 33
    instruccion             go to state 34
    asignacion              go to state 35
    asignacion_booleana     go to state 36
    estructura_condicional  go to state 37
    estructura_iterativa    go to state 38


State 19

    7 salida: VALORES_SALIDA • lista_declaraciones

    ID           shift, and go to state 10
    ID_BOOLEANO  shift, and go to state 11

    lista_declaraciones   go to state 39
    declaracion           go to state 13
    lista_variables       go to state 14
    lista_variables_bool  go to state 15


State 20

    3 valores_entrada_salida: entrada salida • entrada_salida

    VALORES_ENTRADA_SALIDA  shift, and go to state 40

    $default  reduce using rule 8 (entrada_salida)

    entrada_salida  go to state 41


State 21

   13 lista_declaraciones: lista_declaraciones declaracion •

    $default  reduce using rule 13 (lista_declaraciones)


State 22

   17 lista_variables: lista_variables COMA • ID

    ID  shift, and go to state 42


State 23

   14 declaracion: lista_variables DEL_TIPO • tipo FIN_INSTRUCCION

    ENTERO    shift, and go to state 43
    REAL      shift, and go to state 44
    CADENA    shift, and go to state 45
    CARACTER  shift, and go to state 46

    tipo  go to state 47


State 24

   19 lista_variables_bool: lista_variables_bool COMA • ID_BOOLEANO

    ID_BOOLEANO  shift, and go to state 48


State 25

   15 declaracion: lista_variables_bool DEL_TIPO • BOOLEANO FIN_INSTRUCCION

    BOOLEANO  shift, and go to state 49


State 26

   11 declaraciones: VAR lista_declaraciones • FVAR
   13 lista_declaraciones: lista_declaraciones • declaracion

    ID           shift, and go to state 10
    ID_BOOLEANO  shift, and go to state 11
    FVAR         shift, and go to state 50

    declaracion           go to state 21
    lista_variables       go to state 14
    lista_variables_bool  go to state 15


State 27

   31 asignacion: ID • ASIGNACION expresion

    ASIGNACION  shift, and go to state 51


State 28

   32 asignacion_booleana: ID_BOOLEANO • ASIGNACION expresion_booleana

    ASIGNACION  shift, and go to state 52


State 29

   58 estructura_condicional: SI • expresion_booleana THEN m instrucciones estructura_sino FSI

    VALOR         shift, and go to state 53
    VALOR_BOOL    shift, and go to state 54
    ID            shift, and go to state 55
    ID_BOOLEANO   shift, and go to state 56
    NEGACION      shift, and go to state 57
    PARENTESIS_I  shift, and go to state 58

    id_o_valor_o_funcion           go to state 59
    llamada_funcion                go to state 60
    id_o_valor_o_funcion_booleana  go to state 61
    llamada_funcion_booleana       go to state 62
    valores_booleanos              go to state 63
    expresion_booleana             go to state 64


State 30

   68 estructura_iterativa: MIENTRAS • m expresion_booleana HACER m instrucciones FMIENTRAS

    $default  reduce using rule 67 (m)

    m  go to state 65


State 31

   69 estructura_iterativa: PARA • condicion_para HACER instrucciones FPARA

    ID  shift, and go to state 66

    condicion_para     go to state 67
    asignacion_entera  go to state 68


State 32

   30 instruccion: CONTINUAR •

    $default  reduce using rule 30 (instruccion)


State 33

    2 cuerpo: valores_entrada_salida declaraciones instrucciones •

    $default  reduce using rule 2 (cuerpo)


State 34

   24 instrucciones: instruccion •
   25              | instruccion • FIN_INSTRUCCION instrucciones

    FIN_INSTRUCCION  shift, and go to state 69

    $default  reduce using rule 24 (instrucciones)


State 35

   26 instruccion: asignacion •

    $default  reduce using rule 26 (instruccion)


State 36

   27 instruccion: asignacion_booleana •

    $default  reduce using rule 27 (instruccion)


State 37

   28 instruccion: estructura_condicional •

    $default  reduce using rule 28 (instruccion)


State 38

   29 instruccion: estructura_iterativa •

    $default  reduce using rule 29 (instruccion)


State 39

    7 salida: VALORES_SALIDA lista_declaraciones •
   13 lista_declaraciones: lista_declaraciones • declaracion

    ID           shift, and go to state 10
    ID_BOOLEANO  shift, and go to state 11

    ID           [reduce using rule 7 (salida)]
    ID_BOOLEANO  [reduce using rule 7 (salida)]
    $default     reduce using rule 7 (salida)

    declaracion           go to state 21
    lista_variables       go to state 14
    lista_variables_bool  go to state 15


State 40

    9 entrada_salida: VALORES_ENTRADA_SALIDA • lista_declaraciones

    ID           shift, and go to state 10
    ID_BOOLEANO  shift, and go to state 11

    lista_declaraciones   go to state 70
    declaracion           go to state 13
    lista_variables       go to state 14
    lista_variables_bool  go to state 15


State 41

    3 valores_entrada_salida: entrada salida entrada_salida •

    $default  reduce using rule 3 (valores_entrada_salida)


State 42

   17 lista_variables: lista_variables COMA ID •

    $default  reduce using rule 17 (lista_variables)


State 43

   20 tipo: ENTERO •

    $default  reduce using rule 20 (tipo)


State 44

   21 tipo: REAL •

    $default  reduce using rule 21 (tipo)


State 45

   22 tipo: CADENA •

    $default  reduce using rule 22 (tipo)


State 46

   23 tipo: CARACTER •

    $default  reduce using rule 23 (tipo)


State 47

   14 declaracion: lista_variables DEL_TIPO tipo • FIN_INSTRUCCION

    FIN_INSTRUCCION  shift, and go to state 71


State 48

   19 lista_variables_bool: lista_variables_bool COMA ID_BOOLEANO •

    $default  reduce using rule 19 (lista_variables_bool)


State 49

   15 declaracion: lista_variables_bool DEL_TIPO BOOLEANO • FIN_INSTRUCCION

    FIN_INSTRUCCION  shift, and go to state 72


State 50

   11 declaraciones: VAR lista_declaraciones FVAR •

    $default  reduce using rule 11 (declaraciones)


State 51

   31 asignacion: ID ASIGNACION • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 76
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 52

   32 asignacion_booleana: ID_BOOLEANO ASIGNACION • expresion_booleana

    VALOR         shift, and go to state 53
    VALOR_BOOL    shift, and go to state 54
    ID            shift, and go to state 55
    ID_BOOLEANO   shift, and go to state 56
    NEGACION      shift, and go to state 57
    PARENTESIS_I  shift, and go to state 58

    id_o_valor_o_funcion           go to state 59
    llamada_funcion                go to state 60
    id_o_valor_o_funcion_booleana  go to state 61
    llamada_funcion_booleana       go to state 62
    valores_booleanos              go to state 63
    expresion_booleana             go to state 79


State 53

   44 id_o_valor_o_funcion: VALOR •

    $default  reduce using rule 44 (id_o_valor_o_funcion)


State 54

   57 valores_booleanos: VALOR_BOOL •

    $default  reduce using rule 57 (valores_booleanos)


State 55

   43 id_o_valor_o_funcion: ID •
   46                     | ID • CORCHETE_I id_o_valor_o_funcion CORCHETE_D
   47 llamada_funcion: ID • PARENTESIS_I lista_valores PARENTESIS_D

    PARENTESIS_I  shift, and go to state 80
    CORCHETE_I    shift, and go to state 81

    $default  reduce using rule 43 (id_o_valor_o_funcion)


State 56

   53 id_o_valor_o_funcion_booleana: ID_BOOLEANO • CORCHETE_I id_o_valor_o_funcion CORCHETE_D
   55 llamada_funcion_booleana: ID_BOOLEANO • PARENTESIS_I lista_valores PARENTESIS_D
   56 valores_booleanos: ID_BOOLEANO •

    PARENTESIS_I  shift, and go to state 82
    CORCHETE_I    shift, and go to state 83

    $default  reduce using rule 56 (valores_booleanos)


State 57

   66 expresion_booleana: NEGACION • expresion_booleana

    VALOR         shift, and go to state 53
    VALOR_BOOL    shift, and go to state 54
    ID            shift, and go to state 55
    ID_BOOLEANO   shift, and go to state 56
    NEGACION      shift, and go to state 57
    PARENTESIS_I  shift, and go to state 58

    id_o_valor_o_funcion           go to state 59
    llamada_funcion                go to state 60
    id_o_valor_o_funcion_booleana  go to state 61
    llamada_funcion_booleana       go to state 62
    valores_booleanos              go to state 63
    expresion_booleana             go to state 84


State 58

   65 expresion_booleana: PARENTESIS_I • expresion_booleana PARENTESIS_D

    VALOR         shift, and go to state 53
    VALOR_BOOL    shift, and go to state 54
    ID            shift, and go to state 55
    ID_BOOLEANO   shift, and go to state 56
    NEGACION      shift, and go to state 57
    PARENTESIS_I  shift, and go to state 58

    id_o_valor_o_funcion           go to state 59
    llamada_funcion                go to state 60
    id_o_valor_o_funcion_booleana  go to state 61
    llamada_funcion_booleana       go to state 62
    valores_booleanos              go to state 63
    expresion_booleana             go to state 85


State 59

   63 expresion_booleana: id_o_valor_o_funcion • COMPARADOR id_o_valor_o_funcion

    COMPARADOR  shift, and go to state 86


State 60

   45 id_o_valor_o_funcion: llamada_funcion •

    $default  reduce using rule 45 (id_o_valor_o_funcion)


State 61

   62 expresion_booleana: id_o_valor_o_funcion_booleana •

    $default  reduce using rule 62 (expresion_booleana)


State 62

   52 id_o_valor_o_funcion_booleana: llamada_funcion_booleana •

    $default  reduce using rule 52 (id_o_valor_o_funcion_booleana)


State 63

   54 id_o_valor_o_funcion_booleana: valores_booleanos •

    $default  reduce using rule 54 (id_o_valor_o_funcion_booleana)


State 64

   58 estructura_condicional: SI expresion_booleana • THEN m instrucciones estructura_sino FSI
   64 expresion_booleana: expresion_booleana • OPERADOR m expresion_booleana

    OPERADOR  shift, and go to state 87
    THEN      shift, and go to state 88


State 65

   68 estructura_iterativa: MIENTRAS m • expresion_booleana HACER m instrucciones FMIENTRAS

    VALOR         shift, and go to state 53
    VALOR_BOOL    shift, and go to state 54
    ID            shift, and go to state 55
    ID_BOOLEANO   shift, and go to state 56
    NEGACION      shift, and go to state 57
    PARENTESIS_I  shift, and go to state 58

    id_o_valor_o_funcion           go to state 59
    llamada_funcion                go to state 60
    id_o_valor_o_funcion_booleana  go to state 61
    llamada_funcion_booleana       go to state 62
    valores_booleanos              go to state 63
    expresion_booleana             go to state 89


State 66

   71 asignacion_entera: ID • ASIGNACION expresion

    ASIGNACION  shift, and go to state 90


State 67

   69 estructura_iterativa: PARA condicion_para • HACER instrucciones FPARA

    HACER  shift, and go to state 91


State 68

   70 condicion_para: asignacion_entera • HASTA expresion

    HASTA  shift, and go to state 92


State 69

   25 instrucciones: instruccion FIN_INSTRUCCION • instrucciones

    ID           shift, and go to state 27
    ID_BOOLEANO  shift, and go to state 28
    SI           shift, and go to state 29
    MIENTRAS     shift, and go to state 30
    PARA         shift, and go to state 31
    CONTINUAR    shift, and go to state 32

    instrucciones           go to state 93
    instruccion             go to state 34
    asignacion              go to state 35
    asignacion_booleana     go to state 36
    estructura_condicional  go to state 37
    estructura_iterativa    go to state 38


State 70

    9 entrada_salida: VALORES_ENTRADA_SALIDA lista_declaraciones •
   13 lista_declaraciones: lista_declaraciones • declaracion

    ID           shift, and go to state 10
    ID_BOOLEANO  shift, and go to state 11

    ID           [reduce using rule 9 (entrada_salida)]
    ID_BOOLEANO  [reduce using rule 9 (entrada_salida)]
    $default     reduce using rule 9 (entrada_salida)

    declaracion           go to state 21
    lista_variables       go to state 14
    lista_variables_bool  go to state 15


State 71

   14 declaracion: lista_variables DEL_TIPO tipo FIN_INSTRUCCION •

    $default  reduce using rule 14 (declaracion)


State 72

   15 declaracion: lista_variables_bool DEL_TIPO BOOLEANO FIN_INSTRUCCION •

    $default  reduce using rule 15 (declaracion)


State 73

   33 expresion: PARENTESIS_I • expresion_sin_parentesis PARENTESIS_D

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 94
    expresion_sin_parentesis  go to state 95
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 74

   36 expresion_sin_parentesis: SUMA • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 96
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 75

   37 expresion_sin_parentesis: RESTA • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 97
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 76

   31 asignacion: ID ASIGNACION expresion •
   38 expresion_sin_parentesis: expresion • SUMA expresion
   39                         | expresion • RESTA expresion
   40                         | expresion • DIVISION expresion
   41                         | expresion • RESTO expresion
   42                         | expresion • MULTIPLICACION expresion

    DIVISION        shift, and go to state 98
    SUMA            shift, and go to state 99
    RESTA           shift, and go to state 100
    RESTO           shift, and go to state 101
    MULTIPLICACION  shift, and go to state 102

    $default  reduce using rule 31 (asignacion)


State 77

   34 expresion: expresion_sin_parentesis •

    $default  reduce using rule 34 (expresion)


State 78

   35 expresion_sin_parentesis: id_o_valor_o_funcion •

    $default  reduce using rule 35 (expresion_sin_parentesis)


State 79

   32 asignacion_booleana: ID_BOOLEANO ASIGNACION expresion_booleana •
   64 expresion_booleana: expresion_booleana • OPERADOR m expresion_booleana

    OPERADOR  shift, and go to state 87

    $default  reduce using rule 32 (asignacion_booleana)


State 80

   47 llamada_funcion: ID PARENTESIS_I • lista_valores PARENTESIS_D

    VALOR        shift, and go to state 53
    VALOR_BOOL   shift, and go to state 54
    ID           shift, and go to state 55
    ID_BOOLEANO  shift, and go to state 103

    id_o_valor_o_funcion  go to state 104
    llamada_funcion       go to state 60
    lista_valores         go to state 105
    valores_booleanos     go to state 106


State 81

   46 id_o_valor_o_funcion: ID CORCHETE_I • id_o_valor_o_funcion CORCHETE_D

    VALOR  shift, and go to state 53
    ID     shift, and go to state 55

    id_o_valor_o_funcion  go to state 107
    llamada_funcion       go to state 60


State 82

   55 llamada_funcion_booleana: ID_BOOLEANO PARENTESIS_I • lista_valores PARENTESIS_D

    VALOR        shift, and go to state 53
    VALOR_BOOL   shift, and go to state 54
    ID           shift, and go to state 55
    ID_BOOLEANO  shift, and go to state 103

    id_o_valor_o_funcion  go to state 104
    llamada_funcion       go to state 60
    lista_valores         go to state 108
    valores_booleanos     go to state 106


State 83

   53 id_o_valor_o_funcion_booleana: ID_BOOLEANO CORCHETE_I • id_o_valor_o_funcion CORCHETE_D

    VALOR  shift, and go to state 53
    ID     shift, and go to state 55

    id_o_valor_o_funcion  go to state 109
    llamada_funcion       go to state 60


State 84

   64 expresion_booleana: expresion_booleana • OPERADOR m expresion_booleana
   66                   | NEGACION expresion_booleana •

    OPERADOR  shift, and go to state 87

    OPERADOR  [reduce using rule 66 (expresion_booleana)]
    $default  reduce using rule 66 (expresion_booleana)


State 85

   64 expresion_booleana: expresion_booleana • OPERADOR m expresion_booleana
   65                   | PARENTESIS_I expresion_booleana • PARENTESIS_D

    OPERADOR      shift, and go to state 87
    PARENTESIS_D  shift, and go to state 110


State 86

   63 expresion_booleana: id_o_valor_o_funcion COMPARADOR • id_o_valor_o_funcion

    VALOR  shift, and go to state 53
    ID     shift, and go to state 55

    id_o_valor_o_funcion  go to state 111
    llamada_funcion       go to state 60


State 87

   64 expresion_booleana: expresion_booleana OPERADOR • m expresion_booleana

    $default  reduce using rule 67 (m)

    m  go to state 112


State 88

   58 estructura_condicional: SI expresion_booleana THEN • m instrucciones estructura_sino FSI

    $default  reduce using rule 67 (m)

    m  go to state 113


State 89

   64 expresion_booleana: expresion_booleana • OPERADOR m expresion_booleana
   68 estructura_iterativa: MIENTRAS m expresion_booleana • HACER m instrucciones FMIENTRAS

    OPERADOR  shift, and go to state 87
    HACER     shift, and go to state 114


State 90

   71 asignacion_entera: ID ASIGNACION • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 115
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 91

   69 estructura_iterativa: PARA condicion_para HACER • instrucciones FPARA

    ID           shift, and go to state 27
    ID_BOOLEANO  shift, and go to state 28
    SI           shift, and go to state 29
    MIENTRAS     shift, and go to state 30
    PARA         shift, and go to state 31
    CONTINUAR    shift, and go to state 32

    instrucciones           go to state 116
    instruccion             go to state 34
    asignacion              go to state 35
    asignacion_booleana     go to state 36
    estructura_condicional  go to state 37
    estructura_iterativa    go to state 38


State 92

   70 condicion_para: asignacion_entera HASTA • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 117
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 93

   25 instrucciones: instruccion FIN_INSTRUCCION instrucciones •

    $default  reduce using rule 25 (instrucciones)


State 94

   38 expresion_sin_parentesis: expresion • SUMA expresion
   39                         | expresion • RESTA expresion
   40                         | expresion • DIVISION expresion
   41                         | expresion • RESTO expresion
   42                         | expresion • MULTIPLICACION expresion

    DIVISION        shift, and go to state 98
    SUMA            shift, and go to state 99
    RESTA           shift, and go to state 100
    RESTO           shift, and go to state 101
    MULTIPLICACION  shift, and go to state 102


State 95

   33 expresion: PARENTESIS_I expresion_sin_parentesis • PARENTESIS_D
   34          | expresion_sin_parentesis •

    PARENTESIS_D  shift, and go to state 118

    $default  reduce using rule 34 (expresion)


State 96

   36 expresion_sin_parentesis: SUMA expresion •
   38                         | expresion • SUMA expresion
   39                         | expresion • RESTA expresion
   40                         | expresion • DIVISION expresion
   41                         | expresion • RESTO expresion
   42                         | expresion • MULTIPLICACION expresion

    DIVISION        shift, and go to state 98
    RESTO           shift, and go to state 101
    MULTIPLICACION  shift, and go to state 102

    $default  reduce using rule 36 (expresion_sin_parentesis)


State 97

   37 expresion_sin_parentesis: RESTA expresion •
   38                         | expresion • SUMA expresion
   39                         | expresion • RESTA expresion
   40                         | expresion • DIVISION expresion
   41                         | expresion • RESTO expresion
   42                         | expresion • MULTIPLICACION expresion

    DIVISION        shift, and go to state 98
    RESTO           shift, and go to state 101
    MULTIPLICACION  shift, and go to state 102

    $default  reduce using rule 37 (expresion_sin_parentesis)


State 98

   40 expresion_sin_parentesis: expresion DIVISION • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 119
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 99

   38 expresion_sin_parentesis: expresion SUMA • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 120
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 100

   39 expresion_sin_parentesis: expresion RESTA • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 121
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 101

   41 expresion_sin_parentesis: expresion RESTO • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 122
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 102

   42 expresion_sin_parentesis: expresion MULTIPLICACION • expresion

    VALOR         shift, and go to state 53
    ID            shift, and go to state 55
    PARENTESIS_I  shift, and go to state 73
    SUMA          shift, and go to state 74
    RESTA         shift, and go to state 75

    expresion                 go to state 123
    expresion_sin_parentesis  go to state 77
    id_o_valor_o_funcion      go to state 78
    llamada_funcion           go to state 60


State 103

   56 valores_booleanos: ID_BOOLEANO •
